# wsburrow

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  agents.md
docs/superpowers/plans/: 2026-06-29-code-review-fixes.md  2026-06-29-production-hardening.md  2026-06-29-tls-support-stage2.md  2026-06-29-tls-support.md
docs/superpowers/specs/: 2026-06-29-production-hardening-design.md  2026-06-29-tls-support-design.md  2026-06-29-tls-support-stage2-design.md
openwrt/: Makefile
openwrt/files/etc/config/: wsburrow
openwrt/wsburrow/files/etc/init.d/: wsburrow
src/: base64.c  base64.h  config.c  config.h  jwt.c  jwt.h  local_tcp.c  local_tcp.h  main.c  tunnel.c  tunnel.h  ws_client.c  ws_client.h
tests/: .test_integration.py.swp  CMakeLists.txt  test_config.cc  test_integration.py  test_jwt.cc  test_sequential_clients.py
tools/: poc_101_proxy.py  test_tunnel_resilience.py  ws_capture.py  ws_capture_delayed.py
wsburrow/: Makefile
